Adding dedicated domains init